# backend/openapi.json
@@ -4565,6 +4565,32 @@
         ]
       }
     },
+    "/api/livekit/channels/{channelId}/mute-participant": {
+      "post": {
+        "operationId": "LivekitController_muteParticipant",
+        "parameters": [
+          {
+            "name": "channelId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Participant muted/unmuted successfully"
+          },
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Livekit"
+        ]
+      }
+    },
     "/api/livekit/connection-info": {
       "get": {
         "operationId": "LivekitController_getConnectionInfo",
@@ -7109,7 +7135,8 @@
                 "UNPIN_MESSAGE",
                 "DELETE_ANY_MESSAGE",
                 "VIEW_BAN_LIST",
-                "VIEW_MODERATION_LOGS"
+                "VIEW_MODERATION_LOGS",
+                "MUTE_PARTICIPANT"
               ]
             }
           },
@@ -7250,7 +7277,8 @@
                 "UNPIN_MESSAGE",
                 "DELETE_ANY_MESSAGE",
                 "VIEW_BAN_LIST",
-                "VIEW_MODERATION_LOGS"
+                "VIEW_MODERATION_LOGS",
+                "MUTE_PARTICIPANT"
               ]
             }
           },
@@ -7328,7 +7356,8 @@
                 "UNPIN_MESSAGE",
                 "DELETE_ANY_MESSAGE",
                 "VIEW_BAN_LIST",
-                "VIEW_MODERATION_LOGS"
+                "VIEW_MODERATION_LOGS",
+                "MUTE_PARTICIPANT"
               ]
             }
           },
@@ -8588,6 +8617,10 @@
             "nullable": true
           },
           "directMessageGroupId": {
+            "type": "string",
+            "nullable": true
+          },
+          "communityId": {
             "type": "string",
             "nullable": true
           },
